Changelog
=========

0.0.17 (unreleased)
-------------------

- Update to use the latest trigger API (as it was changed in 0.8.7).


0.0.16 (2012-11-01)
-------------------

- Remove the ``name`` args from the pollers - they were removed in time for 0.8.7.


0.0.15 (2012-11-01)
-------------------

- Now fully support the ``matrix`` options allowing finer control over the
  implied matrix generated from the list of runtimes and environment
  variables::

      python:
        - 2.6
        - 2.7
      env:
        - FLAVOUR=apple
        - FLAVOUR=orange
      matrix:
        exclude:
          - python: 2.7
            env: FLAVOUR=orange
        include:
          - python: 2.7
            env: FLAVOUR=banana

  This will do an additional build of the ``banana`` build but only for python
  2.7. And it will turn off the build for the ``orange`` flavour, again only
  for python 2.7.

- Mail notification can't send a change notification if it doesn't have
  anything to compare to (to detect the change). So it doesn't try to.


0.0.14 (2012-06-11)
-------------------

- UI hints during graceful shutdown


0.0.13 (2012-06-11)
-------------------

- Only show pending builds on the right page :P


0.0.12 (2012-06-07)
-------------------

- Nothing changed yet.


0.0.11 (2012-06-07)
-------------------

- Fix manifest to include templates


0.0.10 (2012-06-07)
-------------------

- Nothing changed yet.


0.0.9 (2012-06-07)
------------------

- Add a ``nextBuild`` handler that stops there being spawner builds without
  runner capacity.

- Add some default ignores.

- Use SingleBranchScheduler / AnyBranchScheduler

- Show pending builds in web ui.


0.0.8 (2012-06-06)
------------------

- Fix unskinned 'building' view on ``/projects/wibble/`` url handler.


0.0.7 (2012-06-06)
------------------

- Brown paper bag release.


0.0.6 (2012-06-06)
------------------

- The pollers are now named - this allows them to be triggered by a change
  hook.


0.0.5 (2012-06-05)