@@ -1,4 +1,4 @@
- {% extends 'travis.layout.html' %}
+{% extends 'travis.layout.html' %}
 
 {% block body %}
 
@@ -7,12 +7,40 @@
 </div>
 
     <h2>How does my project get on here?</h2>
-	    <p>Speak to your friendly administrator. They will need to know the
-    name of your project and the repository where your code is hosted.</p>
+    <p>Using the 'Add Project' link at the top of this page. Don't add projects twice - we support multiple branches!</p>
 
     <h2>How do I configure my builds?</h2>
     <p>Your project will need a <code>.travis.yml</code>. This defines all the steps needed to build and test your project.</p>
 
+    <h2>Will it work with my weird SVN layout?</h2>
+    <p>When using subversion some assumptions about the layout are made. This is to avoding needing custom code for each repository. First of all, here are 2 examples of good layouts. 1 project per repo should look something like this:</p>
+
+    <pre>
+    trunk/
+        .travis.yml
+    branches/
+        mybranch/
+            .travis.yml
+    </pre>
+
+    <p>Sometimes you have multiple projects in the same repository. That is supported:</p>
+
+    <pre>
+    project1/
+        trunk/
+            .travis.yml
+        branches/
+            mybranch/
+                .travis.yml
+    project2/
+        trunk/
+            .travis.yml
+        branches/
+            mybranch/
+                .travis.yml
+    </pre>
+
+    <p>If your project doesn't look like this then speak to your friendly administrator for further guidance.</p>
 
     <h2>What does a simple config file look like?</h2>
     <p>For a simple buildout project the <code>.travis.yml</code> configuration might look as simple as this:</p>
@@ -71,3 +99,4 @@
     </pre>
 
 {% endblock %}
+
