@@ -1,0 +1,46 @@
+{% extends "travis.layout.html" %}
+
+{% block body %}
+
+<div class="page-header">
+  <h1>Add new project to CI</h1>
+</div>
+
+<p>Your project should contain a <code>.travis.yml</code>. This should be in the root of your trunk or branch. Normally this is the same folder as your <code>bootstrap.py</code>, <code>buildout.cfg</code> or <code>setup.py</code>. You should have read the about page, in particular the notes about SVN layout.</p>
+
+<p><b>Please DO NOT set the 'branch' option</b> without understanding what it is for. This is a special case for projects with odd SVN layouts and isn't normally needed.</p>
+
+<form action="/add" class="form-horizontal">
+    <fieldset>
+        <div class="control-group">
+            <label class="control-label" for="name">Project name:</label>
+            <div class="controls">
+                <input class="span8" id="name" name="name" size="30" type="text" value=""/>
+                <p class="help-block">Name to show in CI for project. Please use a-z, 0-9 and dashes only.</p>
+            </div>
+        </div>
+
+        <div class="control-group">
+            <label class="control-label" for="repository">Repository:</label>
+            <div class="controls">
+                <input class="span8" id="repository" name="repository" size="30" type="url" value=""/>
+                <p class="help-block">An SVN or Git repository (currently limited to Isotoma and GitHub). In the case of SVN, this should be the folder that contains the trunk/tags/branches folder.</p>
+            </div>
+        </div>
+
+        <div class="control-group">
+            <label class="control-label" for="branch">Branch:</label>
+            <div class="controls">
+                <input class="span8" id="branch" name="branch" size="30" type="text" value=""/>
+                <p class="help-block"><b>This is only for projects that don't have a sensible SVN layout</b>. You should probably talk to DevOps before using this field.</p>
+            </div>
+        </div>
+    </fieldset>
+
+    <div class="form-actions">
+        <input type="submit" value="Submit" class="btn btn-large btn-primary" />
+    </div>
+</form>
+
+{% endblock %}
+
