@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -130,6 +129,7 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="/about">About</a></li>
+              <li><a href="/add_form">Add Project</a></li>
               <li><a href="/projects">Projects</a></li>
             </ul>
           </div>
